build: upgrade backend to Java 25 LTS
- Set java.version to 25 and use eclipse-temurin 25 images in all Dockerfiles
- Update CI backend/security workflows to Java 25
- Refresh documentation references from Java 21 to Java 25
- Use List.getFirst() instead of get(0) in WhatsAppMessageResponse and
  RateLimitFilter (idiomatic on Java 21+; guarded by !isEmpty)